--- a/Python/PRA4/Plot_Newton2_CircularMotion.ipynb
+++ b/Python/PRA4/Plot_Newton2_CircularMotion.ipynb
@@ -42,7 +42,7 @@
     "# YOUR_NAME:\n",
     "#\n",
     "# Your name. This will help distinguish your plots.\n",
-    "NAME = \"Emily Tyhurst\"\n",
+    "NAME = \"Biobele Harry\"\n",
     "\n",
     "# DATA_FILENAME:\n",
     "#\n",
